--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-ventas/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-ventas/index.html
@@ -46,8 +46,8 @@
             <select name="order-by" id="order-by" class="custom-select">
               <option value="NameA-Z">Nombre (A-Z)</option>
               <option value="NameZ-A">Nombre (Z-A)</option>
-              <option value="priceLowHigh">Precio (menor a mayor)</option>
-              <option value="priceHighLow">Precio (mayor a menor)</option>
+              <option value="priceLowHigh">Costo de Entrega (menor a mayor)</option>
+              <option value="priceHighLow">Costo de Entrega (mayor a menor)</option>
               <option selected value="newestSale">
                 Fecha de Venta (más reciente)
               </option>
