--- a/frontend/Pagina-de-usuario/k-card-inicio/login-page/index.html
+++ b/frontend/Pagina-de-usuario/k-card-inicio/login-page/index.html
@@ -27,7 +27,7 @@
     </nav>
     <div class="container is-flex">
       <form id="formulario">
-        <h2 class="title-form">Registrese</h2>
+        <h2 class="title-form">Inicie Sesion</h2>
         <div>
           <label for="user">Usuario</label>
           <input type="text" id="user" maxlength="30" required />
@@ -46,7 +46,7 @@
         <button id="button" type="submit">Iniciar Sesion</button>
         <h2 class="title-form">
           Si no tiene una cuenta
-          <a href="../sign-up-page/index.html">resgistrese</a>
+          <a href="../sign-up-page/index.html">Registrese</a>
         </h2>
       </form>
     </div>
