agrego imagenes al readme y modifico mini cosas en el frontend

--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-ventas/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-ventas/index.html
@@ -72,7 +72,7 @@
               <th class="font">Fecha de Venta</th>
               <th class="font">Lugar de Entrega</th>
               <th class="font">Fecha Entrega</th>
-              <th class="font">Hora</th>
+              <th class="font">Hora Entrega</th>
               <th class="font">Costo Entrega</th>
               <th class="font">Ver</th>
               <th class="font">Borrar</th>
