--- a/frontend/Pagina-de-Administrador/k-card-inicio/k-card-ventas/index.html
+++ b/frontend/Pagina-de-Administrador/k-card-inicio/k-card-ventas/index.html
@@ -46,8 +46,12 @@
             <select name="order-by" id="order-by" class="custom-select">
               <option value="NameA-Z">Nombre (A-Z)</option>
               <option value="NameZ-A">Nombre (Z-A)</option>
-              <option value="priceLowHigh">Costo de Entrega (menor a mayor)</option>
-              <option value="priceHighLow">Costo de Entrega (mayor a menor)</option>
+              <option value="priceLowHigh">
+                Costo de Entrega (menor a mayor)
+              </option>
+              <option value="priceHighLow">
+                Costo de Entrega (mayor a menor)
+              </option>
               <option selected value="newestSale">
                 Fecha de Venta (más reciente)
               </option>
@@ -76,6 +80,7 @@
               <th class="font">Costo Entrega</th>
               <th class="font">Ver</th>
               <th class="font">Borrar</th>
+              <th class="font">Modificar</th>
             </tr>
           </thead>
           <tbody id="tbody">
